Fix issue where splash heading image was being cut off at the top on ipad

--- a/css/style.css
+++ b/css/style.css
@@ -309,7 +309,8 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  min-height: 100vh;
+  padding: 2rem 0;
 }
 
 .actions {
@@ -615,7 +616,6 @@ main {
   }
 
   main {
-    height: auto;
     min-height: 100vh;
     padding: 1rem 0;
   }
